@@ -1,0 +1,46 @@
+{
+    "id": "fidwell.scenery_small.tsh0",
+    "authors": ["Chris Sawyer", "Simon Foster"],
+    "version": "1.0",
+    "originalId": "00000001|1MGCBUSH|A911C644",
+    "sourceGame": ["custom"],
+    "objectType": "scenery_small",
+    "properties": {
+        "price": 6,
+        "removalPrice": 5,
+        "cursor": "CURSOR_TREE_DOWN",
+        "hasPrimaryColour": true,
+        "height": 16,
+        "shape": "1/4",
+        "SMALL_SCENERY_FLAG_VOFFSET_CENTRE": true,
+        "isStackable": true
+    },
+    "images": [
+      { "path": "images/0.png", "x": -14, "y": -18 },
+      { "path": "images/1.png", "x": -13, "y": -18 },
+      { "path": "images/2.png", "x": -14, "y": -17 },
+      { "path": "images/3.png", "x": -13, "y": -17 }
+    ],
+    "strings": {
+        "name": {
+            "en-GB": "Bush",
+            "fr-FR": "Buisson",
+            "de-DE": "Busch",
+            "es-ES": "Matorral",
+            "it-IT": "Cespuglio",
+            "nl-NL": "Struik",
+            "sv-SE": "Buske",
+            "ko-KR": "수풀",
+            "zh-CN": "灌木",
+            "zh-TW": "灌木",
+            "pt-BR": "Arbusto",
+            "cs-CZ": "Křoví",
+            "ja-JP": "低木",
+            "pl-PL": "Krzak",
+            "ru-RU": "Куст",
+            "eo-ZZ": "Arbeto",
+            "ca-ES": "Arbust",
+            "fi-FI": "Pensas"
+        }
+    }
+}
